<resources>
    <string name="app_name">Tess</string>
    <string name="title_activity_maps">Map</string>
    <string name="seKart">Se kart</string>
    <string name="demo_card_text">Demo card text</string>
    <string name="long_demo_text">Lisa gikk til skolen. TrippeTripp det sa. I den nye kjolen, trippet hun så glad.</string>
    <string name="two_word_demo_text">Demnonstasjon demo</string>
    <string name="demo_text">Demo</string>
    <string name="send">Send melding</string>
    <string name="inne_ute">Inne/ute</string>
    <string name="prisnivå">Prisnivå:</string>
    <string name="type">Type aktivitet:</string>
    <string name="lesMer">Les mer</string>
    <string name="hjemmeside">Hjemmeside: </string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Åpne Meny</string>
    <string name="navigation_drawer_close">Lukk Meny</string>
    <string name="nav_header_title">Tess</string>
    <string name="nav_header_subtitle">tess@tess.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Innstillinger</string>
    <string name="del">Send melding</string>
    <string name="chooser">Send via:</string>
    <string name="header_image">Header image</string>
    <string name="innendørs">Innendørs</string>
    <string name="utendørs">Utendørs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
